refactor: works first refactor
